--- a/js/package.json
+++ b/js/package.json
@@ -23,7 +23,13 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.50.0",
+    "@opentelemetry/resources": "^1.20.0",
+    "@opentelemetry/sdk-trace-base": "^1.24.1",
+    "@opentelemetry/sdk-trace-node": "^1.24.1",
+    "@opentelemetry/semantic-conventions": "^1.24.1",
     "@types/jest": "^29.5.11",
+    "@types/node": "^20.12.4",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
