refactor: fix tests for mistralai v0.1

--- a/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-mistralai/pyproject.toml
@@ -37,7 +37,7 @@ instruments = [
   "mistralai",
 ]
 test = [
-  "mistralai",
+  "mistralai<0.2",
   "opentelemetry-sdk",
   "opentelemetry-instrumentation-httpx",
   "respx",
