feat: support new instrumentation

--- a/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
@@ -1,5 +1,6 @@
 chromadb
-llama-index >= 0.10.0
+llama-index
+llama-index-core >= 0.10.40
 llama-index-agent-openai
 llama-index-llms-openai
 llama-index-vector-stores-chroma
