update proto requirement

--- a/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
@@ -5,6 +5,7 @@ llama-index-llms-openai >= 0.1.21
 llama-index-vector-stores-chroma
 openinference-instrumentation-llama-index
 opentelemetry-exporter-otlp
+opentelemetry-proto >= 1.12.0
 opentelemetry-sdk
 sqlalchemy
 wikipedia
