--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -36,12 +36,13 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "llama-index-core >= 0.10.41",
+  "llama-index-core >= 0.10.43",
 ]
 test = [
-  "llama-index == 0.10.41",
-  "llama-index-core == 0.10.41",
+  "llama-index == 0.10.43",
+  "llama-index-core == 0.10.43",
   "llama-index-llms-openai",
+  "openinference-instrumentation-openai",
   "opentelemetry-sdk",
   "respx",
 ]
