--- a/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
@@ -1,10 +1,10 @@
 chromadb
-llama-index >= 0.10.44
+llama-index >= 0.10.43
 llama-index-agent-openai >= 0.2.7
 llama-index-llms-openai >= 0.1.22
 llama-index-multi-modal-llms-openai >= 0.1.6
 llama-index-vector-stores-chroma >= 0.1.8
-openinference-instrumentation-llama-index >= 2
+openinference-instrumentation-llama-index
 opentelemetry-exporter-otlp
 opentelemetry-proto >= 1.12.0
 opentelemetry-sdk
