--- a/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-llama-index/examples/requirements.txt
@@ -1,15 +1,19 @@
 chromadb
-llama-index >= 0.10.44
+llama-index >= 0.10.45
+llama-index-core >= 0.10.45
 llama-index-agent-openai >= 0.2.7
+llama-index-embeddings-ollama >= 0.1.2
 llama-index-embeddings-openai >= 0.1.10
+llama-index-llms-ollama >= 0.1.5
 llama-index-llms-openai >= 0.1.22
 llama-index-multi-modal-llms-openai >= 0.1.6
-llama-index-vector-stores-chroma >= 0.1.9
 llama-index-readers-file >= 0.1.23
+llama-index-vector-stores-chroma >= 0.1.9
 openinference-instrumentation-llama-index >= 2.0.0
 opentelemetry-exporter-otlp
 opentelemetry-proto >= 1.12.0
 opentelemetry-sdk
+requests
+sentence-transformers >= 3.0.1
 sqlalchemy
 wikipedia
-requests
