--- a/python/instrumentation/openinference-instrumentation-langchain/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-langchain/examples/requirements.txt
@@ -1,5 +1,6 @@
 langchain
 langchain_openai
+langgraph
 openinference-instrumentation-langchain
 opentelemetry-api >= 1.25.0
 opentelemetry-exporter-otlp >= 1.25.0
