--- a/python/tox.ini
+++ b/python/tox.ini
@@ -10,6 +10,7 @@ envlist =
   py3{8,12}-ci-{llama_index,llama_index-latest}
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{8,12}-ci-{langchain,langchain-latest}
+  py3{9,12}-ci-{guardrails,guardrails-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -27,6 +28,7 @@ changedir =
   dspy: instrumentation/openinference-instrumentation-dspy/
   langchain: instrumentation/openinference-instrumentation-langchain/
   langchain_core: instrumentation/openinference-instrumentation-langchain/src
+  guardrails: instrumentation/openinference-instrumentation-guardrails/src
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   instrumentation: pip install {toxinidir}/openinference-instrumentation
@@ -43,6 +45,8 @@ commands_pre =
   langchain: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
   langchain-latest: pip install -U langchain langchain_core langchain_openai langchain_community
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
+  guardrails: pip install {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
+  guardrails-latest: pip install -U guardrails-ai
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
