--- a/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
@@ -38,15 +38,15 @@ instruments = [
   "langchain_core >= 0.1.0",
 ]
 test = [
-  "langchain_core == 0.1.8",
-  "langchain == 0.1.0",
-  "langchain_openai == 0.0.2",
-  "langchain-community == 0.0.10",
+  "langchain_core == 0.1.47",
+  "langchain",
+  "langchain_openai",
+  "langchain-community",
   "opentelemetry-sdk",
   "respx",
 ]
 type-check = [
-  "langchain_core == 0.1.0",
+  "langchain_core == 0.1.47",
 ]
 
 [project.urls]
