--- a/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-langchain/pyproject.toml
@@ -39,9 +39,9 @@ instruments = [
 ]
 test = [
   "langchain_core == 0.1.47",
-  "langchain",
-  "langchain_openai",
-  "langchain-community",
+  "langchain == 0.1.16",
+  "langchain_openai == 0.1.7",
+  "langchain-community == 0.0.35",
   "opentelemetry-sdk",
   "respx",
 ]
