feat: add vertexai instrumentor

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -7,6 +7,7 @@ envlist =
   py3{8,12}-ci-{bedrock,bedrock-latest}
   py3{9,12}-ci-{mistralai,mistralai-latest}
   py3{8,12}-ci-{openai,openai-latest}
+  py3{8,12}-ci-{vertexai,vertexai-latest}
   py3{8,12}-ci-{llama_index,llama_index-latest}
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{8,12}-ci-{langchain,langchain-latest}
@@ -24,6 +25,7 @@ changedir =
   bedrock: instrumentation/openinference-instrumentation-bedrock/
   mistralai: instrumentation/openinference-instrumentation-mistralai/
   openai: instrumentation/openinference-instrumentation-openai/
+  vertexai: instrumentation/openinference-instrumentation-vertexai/
   llama_index: instrumentation/openinference-instrumentation-llama-index/
   dspy: instrumentation/openinference-instrumentation-dspy/
   langchain: instrumentation/openinference-instrumentation-langchain/
@@ -38,6 +40,8 @@ commands_pre =
   mistralai-latest: pip install -U mistralai
   openai: pip install {toxinidir}/instrumentation/openinference-instrumentation-openai[test]
   openai-latest: pip install -U openai
+  vertexai: pip install {toxinidir}/instrumentation/openinference-instrumentation-vertexai[test]
+  vertexai-latest: pip install -U vertexai
   llama_index: pip install {toxinidir}/instrumentation/openinference-instrumentation-llama-index[test]
   llama_index-latest: pip install -U llama-index llama-index-core
   dspy: pip install {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
