--- a/release-please-config.json
+++ b/release-please-config.json
@@ -19,6 +19,10 @@
             "package-name": "python-openinference-instrumentation-openai",
             "release-type": "python"
         },
+        "python/instrumentation/openinference-instrumentation-vertexai": {
+            "package-name": "python-openinference-instrumentation-vertexai",
+            "release-type": "python"
+        },
         "python/instrumentation/openinference-instrumentation-llama-index": {
             "package-name": "python-openinference-instrumentation-llama-index",
             "release-type": "python"
