--- a/js/packages/openinference-instrumentation-llama-index/package.json
+++ b/js/packages/openinference-instrumentation-llama-index/package.json
@@ -17,8 +17,8 @@
   "author": "oss-devs@arize.com",
   "license": "Apache-2.0",
   "dependencies": {
-    "@opentelemetry/api": "^1.7.0",
-    "@opentelemetry/instrumentation": "^0.46.0",
-    "@arizeai/openinference-semantic-conventions": "workspace:*"
+    "@arizeai/openinference-semantic-conventions": "workspace:*",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/instrumentation": "^0.46.0"
   }
 }
