--- a/python/tox.ini
+++ b/python/tox.ini
@@ -47,7 +47,7 @@ commands_pre =
   dspy: pip install {toxinidir}/instrumentation/openinference-instrumentation-dspy[test]
   dspy-latest: pip install -U dspy-ai
   langchain: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[test]
-  langchain-latest: pip install -U langchain langchain_core langchain_openai langchain_community
+  langchain-latest: pip install -U langchain langchain_core langchain_anthropic langchain_openai langchain_community
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: pip install {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
   guardrails-latest: pip install -U guardrails-ai
