--- a/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
@@ -35,12 +35,7 @@ dependencies = [
 
 [project.optional-dependencies]
 instruments = [
-  "crewai-ai >= 0.4.5",
-]
-test = [
-  "crewai-ai == 0.4.5",
-  "opentelemetry-sdk",
-  "responses",
+  "crewai >= 0.41.1",
 ]
 
 [project.urls]
