--- a/python/tox.ini
+++ b/python/tox.ini
@@ -12,6 +12,7 @@ envlist =
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{8,12}-ci-{langchain,langchain-latest}
   py3{9,12}-ci-{guardrails,guardrails-latest}
+  py3{8,12}-ci-{crewai,crewai-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -31,6 +32,7 @@ changedir =
   langchain: instrumentation/openinference-instrumentation-langchain/
   langchain_core: instrumentation/openinference-instrumentation-langchain/src
   guardrails: instrumentation/openinference-instrumentation-guardrails/
+  crewai: instrumentation/openinference-instrumentation-crewai/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   instrumentation: pip install {toxinidir}/openinference-instrumentation
@@ -51,6 +53,8 @@ commands_pre =
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: pip install {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
   guardrails-latest: pip install -U guardrails-ai
+  crewai: pip install {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
+  crewai-latest: pip install -U crewai
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
