--- a/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-crewai/pyproject.toml
@@ -37,6 +37,10 @@ dependencies = [
 instruments = [
   "crewai >= 0.41.1",
 ]
+test = [
+  "opentelemetry-sdk",
+  "responses",
+]
 
 [project.urls]
 Homepage = "https://github.com/Arize-ai/openinference/tree/main/python/instrumentation/openinference-instrumentation-crewai"
