--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -11,7 +11,7 @@
     "prebuild": "rimraf dist",
     "build": "tsc --build tsconfig.json tsconfig.esm.json tsconfig.esnext.json",
     "type:check": "tsc --noEmit",
-    "test": "echo \"NOOP: openinference-core has no tests\" && exit 0"
+    "test": "jest"
   },
   "files": [
     "dist",
@@ -39,9 +39,12 @@
     "@opentelemetry/api": ">=1.0.0 <1.9.0"
   },
   "devDependencies": {
+    "@opentelemetry/context-async-hooks": "^1.25.1",
     "@opentelemetry/resources": "^1.19.0",
     "@opentelemetry/sdk-trace-base": "^1.19.0",
     "@opentelemetry/sdk-trace-node": "^1.19.0",
-    "@opentelemetry/semantic-conventions": "^1.19.0"
+    "@opentelemetry/semantic-conventions": "^1.19.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.11"
   }
 }
