--- a/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-llama-index/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
   "opentelemetry-instrumentation",
   "opentelemetry-semantic-conventions",
   "openinference-instrumentation>=0.1.9",
-  "openinference-semantic-conventions",
+  "openinference-semantic-conventions>=0.1.9",
   "typing-extensions",
   "wrapt",
 ]
