feat(crewAI): instrumentation (#622)

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -12,6 +12,7 @@ envlist =
   py3{9,12}-ci-{dspy,dspy-latest}
   py3{8,12}-ci-{langchain,langchain-latest}
   py3{9,12}-ci-{guardrails,guardrails-latest}
+  py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
   py38-mypy-langchain_core
 
@@ -32,6 +33,7 @@ changedir =
   langchain: instrumentation/openinference-instrumentation-langchain/
   langchain_core: instrumentation/openinference-instrumentation-langchain/src
   guardrails: instrumentation/openinference-instrumentation-guardrails/
+  crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
@@ -53,6 +55,8 @@ commands_pre =
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: pip install {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
   guardrails-latest: pip install -U guardrails-ai
+  crewai: pip install {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
+  crewai-latest: pip install -U crewai
   haystack: pip install {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: pip install -U haystack-ai
 commands =
