--- a/release-please-config.json
+++ b/release-please-config.json
@@ -42,6 +42,10 @@
         "python/instrumentation/openinference-instrumentation-guardrails": {
             "package-name": "python-openinference-instrumentation-guardrails",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-haystack": {
+            "package-name": "python-openinference-instrumentation-haystack",
+            "release-type": "python"
         }
     }
 }
