--- a/release-please-config.json
+++ b/release-please-config.json
@@ -43,6 +43,10 @@
             "package-name": "python-openinference-instrumentation-guardrails",
             "release-type": "python"
         },
+        "python/instrumentation/openinference-instrumentation-crewai": {
+            "package-name": "python-openinference-instrumentation-crewai",
+            "release-type": "python"
+        },
         "python/instrumentation/openinference-instrumentation-haystack": {
             "package-name": "python-openinference-instrumentation-haystack",
             "release-type": "python"
