feat(haystack): add README and release please for haystack (#663)

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -46,6 +46,10 @@
         "python/instrumentation/openinference-instrumentation-crewai": {
             "package-name": "python-openinference-instrumentation-crewai",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-haystack": {
+            "package-name": "python-openinference-instrumentation-haystack",
+            "release-type": "python"
         }
     }
 }
