Move config settings to common instrumentation package

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -36,8 +36,8 @@ changedir =
   crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
 commands_pre =
+  pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
-  instrumentation: pip install {toxinidir}/openinference-instrumentation
   bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: pip install -U boto3
   mistralai: pip install {toxinidir}/instrumentation/openinference-instrumentation-mistralai[test]
