--- a/release-please-config.json
+++ b/release-please-config.json
@@ -50,6 +50,10 @@
         "python/instrumentation/openinference-instrumentation-haystack": {
             "package-name": "python-openinference-instrumentation-haystack",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-litellm": {
+            "package-name": "python-openinference-instrumentation-litellm",
+            "release-type": "python"
         }
     }
 }
