--- a/python/tox.ini
+++ b/python/tox.ini
@@ -14,6 +14,7 @@ envlist =
   py3{9,12}-ci-{guardrails,guardrails-latest}
   py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
+  py3{8,12}-ci-{groq,groq-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -33,11 +34,10 @@ changedir =
   langchain: instrumentation/openinference-instrumentation-langchain/
   langchain_core: instrumentation/openinference-instrumentation-langchain/src
   guardrails: instrumentation/openinference-instrumentation-guardrails/
-<<<<<<< HEAD
-=======
   crewai: instrumentation/openinference-instrumentation-crewai/
->>>>>>> 9870286e8ea757ca3afa2568bd286231fbaee577
   haystack: instrumentation/openinference-instrumentation-haystack/
+  groq: instrumentation/openinference-instrumentation-groq/
+
 commands_pre =
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   instrumentation: pip install {toxinidir}/openinference-instrumentation
@@ -58,13 +58,13 @@ commands_pre =
   langchain_core: pip install {toxinidir}/instrumentation/openinference-instrumentation-langchain[type-check]
   guardrails: pip install {toxinidir}/instrumentation/openinference-instrumentation-guardrails[test]
   guardrails-latest: pip install -U guardrails-ai
-<<<<<<< HEAD
-=======
   crewai: pip install {toxinidir}/instrumentation/openinference-instrumentation-crewai[test]
   crewai-latest: pip install -U crewai
->>>>>>> 9870286e8ea757ca3afa2568bd286231fbaee577
   haystack: pip install {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: pip install -U haystack-ai
+  groq: pip install {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
+  groq-latest: pip install -U groq
+
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
