--- a/python/tox.ini
+++ b/python/tox.ini
@@ -14,6 +14,7 @@ envlist =
   py3{9,12}-ci-{guardrails,guardrails-latest}
   py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
+  py3{8,12}-ci-{groq,groq-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -35,6 +36,8 @@ changedir =
   guardrails: instrumentation/openinference-instrumentation-guardrails/
   crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
+  groq: instrumentation/openinference-instrumentation-groq/
+
 commands_pre =
   pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
@@ -59,6 +62,9 @@ commands_pre =
   crewai-latest: pip install -U crewai
   haystack: pip install {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: pip install -U haystack-ai
+  groq: pip install {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
+  groq-latest: pip install -U groq
+
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
