--- a/python/tox.ini
+++ b/python/tox.ini
@@ -14,6 +14,7 @@ envlist =
   py3{9,12}-ci-{guardrails,guardrails-latest}
   py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
+  py3{8,12}-ci-{instructor,instructor-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -35,6 +36,7 @@ changedir =
   guardrails: instrumentation/openinference-instrumentation-guardrails/
   crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
+  instructor: instrumentation/openinference-instrumentation-instructor/
 commands_pre =
   pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
@@ -59,6 +61,8 @@ commands_pre =
   crewai-latest: pip install -U crewai
   haystack: pip install {toxinidir}/instrumentation/openinference-instrumentation-haystack[test]
   haystack-latest: pip install -U haystack-ai
+  instructor: pip install {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
+  instructor-latest: pip install -U instructor
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
