--- a/js/packages/openinference-core/package.json
+++ b/js/packages/openinference-core/package.json
@@ -45,6 +45,7 @@
     "@opentelemetry/sdk-trace-node": "^1.19.0",
     "@opentelemetry/semantic-conventions": "^1.19.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.11"
+    "@types/node": "^20.14.11",
+    "jest": "^29.7.0"
   }
 }
