Added tox.ini file modifications

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -37,7 +37,8 @@ changedir =
   crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
   groq: instrumentation/openinference-instrumentation-groq/
-
+  litellm: instrumentation/openinference-instrumentation-litellm/
+  
 commands_pre =
   pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
@@ -64,6 +65,8 @@ commands_pre =
   haystack-latest: pip install -U haystack-ai
   groq: pip install {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: pip install -U groq
+  litellm: pip install {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
+  litellm-latest: pip install -U litellm
 
 commands =
   ruff: ruff format {posargs:.}
