--- a/python/tox.ini
+++ b/python/tox.ini
@@ -15,6 +15,7 @@ envlist =
   py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
+  py3{8,12}-ci-{litellm,litellm-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -38,7 +39,7 @@ changedir =
   haystack: instrumentation/openinference-instrumentation-haystack/
   groq: instrumentation/openinference-instrumentation-groq/
   litellm: instrumentation/openinference-instrumentation-litellm/
-  
+
 commands_pre =
   pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
