fix mocks and add jest as dev dep

--- a/js/packages/openinference-instrumentation-llama-index/package.json
+++ b/js/packages/openinference-instrumentation-llama-index/package.json
@@ -24,6 +24,7 @@
     "@opentelemetry/instrumentation": "^0.46.0"
   },
   "devDependencies": {
+    "jest": "^29.7.0",
     "llamaindex": "^0.3.14"
   }
 }
