--- a/python/tox.ini
+++ b/python/tox.ini
@@ -15,6 +15,7 @@ envlist =
   py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
+  py3{9,12}-ci-{instructor,instructor-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -37,7 +38,7 @@ changedir =
   crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
   groq: instrumentation/openinference-instrumentation-groq/
-
+  instructor: instrumentation/openinference-instrumentation-instructor/
 commands_pre =
   pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
@@ -64,7 +65,8 @@ commands_pre =
   haystack-latest: pip install -U haystack-ai
   groq: pip install {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: pip install -U groq
-
+  instructor: pip install {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
+  instructor-latest: pip install -U instructor
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
