--- a/python/tox.ini
+++ b/python/tox.ini
@@ -16,6 +16,7 @@ envlist =
   py3{8,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
   py3{9,12}-ci-{instructor,instructor-latest}
+  py3{8,12}-ci-{anthropic,anthropic-latest}
   py38-mypy-langchain_core
 
 [testenv]
@@ -39,6 +40,7 @@ changedir =
   haystack: instrumentation/openinference-instrumentation-haystack/
   groq: instrumentation/openinference-instrumentation-groq/
   instructor: instrumentation/openinference-instrumentation-instructor/
+  anthropic: instrumentation/openinference-instrumentation-anthropic/
 commands_pre =
   pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
@@ -67,6 +69,8 @@ commands_pre =
   groq-latest: pip install -U groq
   instructor: pip install {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   instructor-latest: pip install -U instructor
+  anthropic: pip install {toxinidir}/instrumentation/openinference-instrumentation-anthropic[test]
+  anthropic-latest: pip install -U anthropic
 commands =
   ruff: ruff format {posargs:.}
   ruff: ruff check {posargs:.} --fix
