chore: revert instrumentation pip install

--- a/python/tox.ini
+++ b/python/tox.ini
@@ -40,7 +40,7 @@ changedir =
   groq: instrumentation/openinference-instrumentation-groq/
   instructor: instrumentation/openinference-instrumentation-instructor/
 commands_pre =
-  pip install {toxinidir}/openinference-instrumentation
+  instrumentation: pip install {toxinidir}/openinference-instrumentation
   semconv: pip install {toxinidir}/openinference-semantic-conventions
   bedrock: pip install {toxinidir}/instrumentation/openinference-instrumentation-bedrock[test]
   bedrock-latest: pip install -U boto3
