--- a/js/packages/openinference-instrumentation-llama-index/tsconfig.json
+++ b/js/packages/openinference-instrumentation-llama-index/tsconfig.json
@@ -5,6 +5,10 @@
     "rootDir": ".",
   },
   "files": [],
-  "include": ["src/**/*.ts", "test/**/*.ts", "examples/**/*.ts"],
+  "include": [
+    "src/**/*.ts",
+    "test/**/*.ts",
+    "examples/**/*.ts"
+  ],
   "references": []
 }
