--- a/python/instrumentation/openinference-instrumentation-haystack/examples/requirements.txt
+++ b/python/instrumentation/openinference-instrumentation-haystack/examples/requirements.txt
@@ -1,5 +1,6 @@
 datasets
 haystack-ai
+openinference-instrumentation
 openinference-instrumentation-haystack
 opentelemetry-sdk
 opentelemetry-exporter-otlp-proto-http
