--- a/release-please-config.json
+++ b/release-please-config.json
@@ -62,6 +62,10 @@
         "python/instrumentation/openinference-instrumentation-instructor": {
             "package-name": "python-openinference-instrumentation-instructor",
             "release-type": "python"
+        },
+        "python/instrumentation/openinference-instrumentation-placeholder": {
+            "package-name": "python-openinference-instrumentation-placeholder",
+            "release-type": "python"
         }
     }
 }
