update mocking in tests to mock openai calls instead of llama index

--- a/js/packages/openinference-instrumentation-llama-index/package.json
+++ b/js/packages/openinference-instrumentation-llama-index/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "llamaindex": "^0.3.14"
+    "llamaindex": "^0.3.14",
+    "openai": "^4.24.1"
   }
 }
