feat(js): llama-index-ts embeddings support (#761)
Co-authored-by: Parker Stafford <parker.stafford92@gmail.com>
Co-authored-by: Mikyo King <mikyo@arize.com>

--- a/js/packages/openinference-instrumentation-llama-index/package.json
+++ b/js/packages/openinference-instrumentation-llama-index/package.json
@@ -24,6 +24,8 @@
     "@opentelemetry/instrumentation": "^0.46.0"
   },
   "devDependencies": {
-    "llamaindex": "^0.3.14"
+    "jest": "^29.7.0",
+    "llamaindex": "^0.3.14",
+    "openai": "^4.24.1"
   }
 }
