light refactoring and add test

--- a/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-haystack/pyproject.toml
@@ -42,7 +42,7 @@ instruments = [
 test = [
     "haystack-ai >= 2.0.0",
     "opentelemetry-sdk",
-    "responses",
+    "pytest-recording",
 ]
 
 [project.urls]
