--- a/js/examples/openai/backend/package.json
+++ b/js/examples/openai/backend/package.json
@@ -20,6 +20,8 @@
     "@opentelemetry/sdk-trace-base": "^1.20.0",
     "@opentelemetry/sdk-trace-node": "^1.20.0",
     "@opentelemetry/semantic-conventions": "^1.20.0",
+    "ai": "^3.1.20",
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
