changed bound and added dependency

--- a/python/instrumentation/openinference-instrumentation-litellm/pyproject.toml
+++ b/python/instrumentation/openinference-instrumentation-litellm/pyproject.toml
@@ -27,6 +27,7 @@ classifiers = [
 dependencies = [
   "opentelemetry-api",
   "opentelemetry-sdk",
+  "opentelemetry-instrumentation",
   "openinference-instrumentation>=0.1.12",
   "openinference-semantic-conventions>=0.1.9",
   "wrapt",
