--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -14,7 +14,7 @@ defaults:
 jobs:
   ci:
     name: CI Python
-    runs-on: ubuntu-latest
+    runs-on: oss-4-core-runner
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
