--- a/python/tox.ini
+++ b/python/tox.ini
@@ -15,6 +15,7 @@ envlist =
   py3{10,12}-ci-{crewai,crewai-latest}
   py3{8,12}-ci-{haystack,haystack-latest}
   py3{8,12}-ci-{groq,groq-latest}
+  py3{8,12}-ci-{litellm,litellm-latest}
   py3{9,12}-ci-{instructor,instructor-latest}
   py38-mypy-langchain_core
 
@@ -38,6 +39,7 @@ changedir =
   crewai: instrumentation/openinference-instrumentation-crewai/
   haystack: instrumentation/openinference-instrumentation-haystack/
   groq: instrumentation/openinference-instrumentation-groq/
+  litellm: instrumentation/openinference-instrumentation-litellm/
   instructor: instrumentation/openinference-instrumentation-instructor/
 commands_pre =
   instrumentation: pip install {toxinidir}/openinference-instrumentation
@@ -65,6 +67,8 @@ commands_pre =
   haystack-latest: pip install -U haystack-ai
   groq: pip install {toxinidir}/instrumentation/openinference-instrumentation-groq[test]
   groq-latest: pip install -U groq
+  litellm: pip install {toxinidir}/instrumentation/openinference-instrumentation-litellm[test]
+  litellm-latest: pip install -U litellm
   instructor: pip install {toxinidir}/instrumentation/openinference-instrumentation-instructor[test]
   instructor-latest: pip install -U instructor
 commands =
