--- a/.github/workflows/typescript-publish.yaml
+++ b/.github/workflows/typescript-publish.yaml
@@ -9,7 +9,7 @@ env:
 jobs:
     version:
         timeout-minutes: 15
-        runs-on: ubuntu-latest
+        runs-on: oss-4-core-runner
         steps:
             - name: checkout code repository
               uses: actions/checkout@v3
