--- a/.github/workflows/cla.yaml
+++ b/.github/workflows/cla.yaml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
     CLAAssistant:
-        runs-on: oss-4-core-runner
+        runs-on: ubuntu-latest
         steps:
             - name: "CLA Assistant"
               if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
