--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
     main:
         name: Validate PR title
-        runs-on: oss-4-core-runner
+        runs-on: ubuntu-latest
         steps:
             - uses: amannn/action-semantic-pull-request@v5
               env:
