--- a/.github/workflows/typescript-CI.yaml
+++ b/.github/workflows/typescript-CI.yaml
@@ -16,7 +16,7 @@ concurrency:
 jobs:
     ci:
         name: CI Typescript
-        runs-on: oss-4-core-runner
+        runs-on: ubuntu-latest
         steps:
             - name: Checkout Repository
               uses: actions/checkout@v3
