--- a/.github/workflows/python-CI.yaml
+++ b/.github/workflows/python-CI.yaml
@@ -48,7 +48,7 @@ jobs:
             3.10
             3.11
             3.12
-      - run: pip install -U tox-uv
+      - run: pip install tox-uv==1.11.1
         if: ${{ (steps.filter.outputs.diff == 'true') && (steps.changes.outputs.packages != '') }}
       - run: >-
           tox run-parallel --parallel-no-spinner 
