--- a/.github/workflows/python-cron.yaml
+++ b/.github/workflows/python-cron.yaml
@@ -3,6 +3,7 @@ name: Python Canary Cron
 on:
   schedule:
     - cron: "0 18 * * 1-5"
+  workflow_dispatch:
 
 defaults:
   run:
@@ -25,3 +26,28 @@ jobs:
       - run: >-
           tox run-parallel --parallel-no-spinner
           -e $(tox -l | egrep -e '-latest$' | paste -sd, -)
+          --result-json=${{ runner.temp }}/.tox-result.json
+      - run: >-
+          echo "testenvs=$(cat ${{ runner.temp }}/.tox-result.json
+          | jq -r '.testenvs | with_entries(select(.value|.result.success==false)) | keys | .[]')"
+          >> "$GITHUB_OUTPUT"
+        id: failed
+        if: failure()
+      - uses: slackapi/slack-github-action@v1.26.01
+        if: failure()
+        with:
+          payload: |
+            {
+              "text": "Python Packages with CI Failures",
+              "blocks": [
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{ steps.failed.outputs.testenvs }}"
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
