ci: replace newline with backslash

--- a/.github/workflows/python-cron.yaml
+++ b/.github/workflows/python-cron.yaml
@@ -30,7 +30,8 @@ jobs:
       - run: >-
           echo "testenvs='$(cat ${{ runner.temp }}/.tox-result.json
           | jq -r ".testenvs | with_entries(select(.value|.result.success==false)) | keys | .[]"
-          | sort)'"
+          | sort
+          | paste -sd '\' -)'"
           >> "$GITHUB_OUTPUT"
         id: failed
         if: failure()
