--- a/.github/workflows/python-cron.yaml
+++ b/.github/workflows/python-cron.yaml
@@ -31,7 +31,7 @@ jobs:
           echo "testenvs='$(cat ${{ runner.temp }}/.tox-result.json
           | jq -r ".testenvs | with_entries(select(.value|.result.success==false)) | keys | .[]"
           | sort
-          | paste -sd '\' -)'"
+          | paste -sd "\" -)'"
           >> "$GITHUB_OUTPUT"
         id: failed
         if: failure()
